docs: Update documentation to reflect actual browser-based implementation
- Updated README.md with accurate architecture using Web Speech API
- Revised ARCHITECTURE.md to show browser-based STT and real service ports
- Enhanced .env.example with comprehensive configuration options
- Removed DoorDash references (project now focuses on Uber Eats only)
- Added documentation for batch ordering and real-time dashboard features
- Corrected performance metrics and troubleshooting for browser implementation
- Updated setup instructions to reflect Playwright instead of Whisper.cpp

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,192 @@
-# Anthropic API Configuration
+# =============================================================================
+# Hungry Agent - Voice-Based Taco Ordering System
+# Environment Configuration Template
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# REQUIRED: AI & API Configuration
+# -----------------------------------------------------------------------------
+
+# Anthropic Claude API Key (REQUIRED)
+# Get your API key from: https://console.anthropic.com/
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
-# Uber Eats Credentials
+# -----------------------------------------------------------------------------
+# REQUIRED: Food Delivery Service Credentials
+# -----------------------------------------------------------------------------
+
+# Uber Eats Account Credentials (REQUIRED for ordering)
 UBER_EATS_EMAIL=your_uber_eats_email@example.com
 UBER_EATS_PASSWORD=your_uber_eats_password
 
-# DoorDash Credentials
-DOORDASH_EMAIL=your_doordash_email@example.com
-DOORDASH_PASSWORD=your_doordash_password
+# -----------------------------------------------------------------------------
+# Service Ports Configuration
+# -----------------------------------------------------------------------------
 
-# Local Configuration
-LOCAL_DB_PATH=./database/orders.db
-LOG_LEVEL=INFO
-
-# Service Ports
+# Main application ports
 ORCHESTRATOR_PORT=8000
 DASHBOARD_PORT=3000
-STT_PORT=5001
 TTS_PORT=5002
-UBER_MCP_PORT=7001
-DOORDASH_MCP_PORT=7002
 
-# Voice Configuration
-WHISPER_MODEL=tiny
-TTS_VOICE=en-US-rf1
-WAKE_WORD_ENABLED=false
+# MCP server ports
+UBER_MCP_PORT=7001
+
+# -----------------------------------------------------------------------------
+# Database & Storage Configuration
+# -----------------------------------------------------------------------------
+
+# Local SQLite database path
+LOCAL_DB_PATH=./database/orders.db
+
+# Log files directory
+LOG_DIR=./logs
+
+# -----------------------------------------------------------------------------
+# Voice & Audio Configuration
+# -----------------------------------------------------------------------------
+
+# Text-to-Speech voice (macOS voices)
+# Options: Alex, Samantha, Victoria, Daniel, Karen, Moira, Tessa, etc.
+TTS_VOICE=Samantha
+
+# TTS speech rate (0.5 = slow, 1.0 = normal, 2.0 = fast)
+TTS_RATE=1.0
+
+# Voice activity detection sensitivity (0.1 = low, 0.5 = medium, 0.9 = high)
+VOICE_SENSITIVITY=0.5
+
+# -----------------------------------------------------------------------------
+# Application Configuration
+# -----------------------------------------------------------------------------
+
+# Logging level (DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL=INFO
+
+# Default delivery location for restaurant searches
+DEFAULT_LOCATION=Austin, TX
+
+# Maximum concurrent batch orders
+MAX_BATCH_ORDERS=5
+
+# Order timeout in minutes
+ORDER_TIMEOUT_MINUTES=30
+
+# -----------------------------------------------------------------------------
+# Browser Automation Configuration
+# -----------------------------------------------------------------------------
+
+# Playwright browser settings
+BROWSER_HEADLESS=true
+BROWSER_TIMEOUT=30000
+
+# Browser user agent (leave empty for default)
+BROWSER_USER_AGENT=
+
+# -----------------------------------------------------------------------------
+# WebSocket & Real-time Configuration
+# -----------------------------------------------------------------------------
+
+# WebSocket connection timeout (seconds)
+WEBSOCKET_TIMEOUT=30
+
+# Dashboard update interval (milliseconds)
+DASHBOARD_UPDATE_INTERVAL=1000
+
+# Voice activity feed max items
+VOICE_FEED_MAX_ITEMS=50
+
+# -----------------------------------------------------------------------------
+# Security & Privacy Configuration
+# -----------------------------------------------------------------------------
+
+# Enable/disable telemetry and analytics
+TELEMETRY_ENABLED=false
+
+# Session timeout (hours)
+SESSION_TIMEOUT_HOURS=24
+
+# Maximum voice recording duration (seconds)
+MAX_RECORDING_DURATION=30
+
+# -----------------------------------------------------------------------------
+# Development & Debug Configuration
+# -----------------------------------------------------------------------------
+
+# Enable development mode features
+DEV_MODE=false
+
+# Enable verbose MCP logging
+MCP_DEBUG=false
+
+# Enable Claude API request logging
+CLAUDE_DEBUG=false
+
+# Enable browser automation screenshots on error
+BROWSER_SCREENSHOTS=false
+
+# Mock mode (for testing without real orders)
+MOCK_ORDERS=false
+
+# -----------------------------------------------------------------------------
+# Optional: Advanced Configuration
+# -----------------------------------------------------------------------------
+
+# Custom Claude model (leave empty for default)
+CLAUDE_MODEL=
+
+# Custom Claude max tokens
+CLAUDE_MAX_TOKENS=1000
+
+# Custom Claude temperature (0.0 = deterministic, 1.0 = creative)
+CLAUDE_TEMPERATURE=0.7
+
+# Retry attempts for failed operations
+MAX_RETRIES=3
+
+# Request timeout for external APIs (seconds)
+API_TIMEOUT=30
+
+# -----------------------------------------------------------------------------
+# Optional: Notification Configuration
+# -----------------------------------------------------------------------------
+
+# Enable desktop notifications (macOS)
+DESKTOP_NOTIFICATIONS=true
+
+# Enable audio notifications
+AUDIO_NOTIFICATIONS=true
+
+# Notification sound file (leave empty for system default)
+NOTIFICATION_SOUND=
+
+# -----------------------------------------------------------------------------
+# Optional: Performance Tuning
+# -----------------------------------------------------------------------------
+
+# Database connection pool size
+DB_POOL_SIZE=5
+
+# HTTP client connection pool size
+HTTP_POOL_SIZE=10
+
+# WebSocket message queue size
+WS_QUEUE_SIZE=100
+
+# Voice processing buffer size
+VOICE_BUFFER_SIZE=1024
+
+# =============================================================================
+# Setup Instructions:
+# 
+# 1. Copy this file to .env:
+#    cp .env.example .env
+#
+# 2. Fill in the REQUIRED fields:
+#    - ANTHROPIC_API_KEY
+#    - UBER_EATS_EMAIL
+#    - UBER_EATS_PASSWORD
+#
+# 3. Optionally customize other settings for your environment
+#
+# 4. Never commit the .env file to version control!
+# =============================================================================
